--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "yup": "^1.6.1"
