--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
